Replaced logos with correct versions, adjust alignment, and styling of legal links. Added separator at the top.

--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -14,6 +14,7 @@
 }
 
 footer {
+  
   z-index: 9000;
   width: 100%;
   height: 100%;
@@ -22,19 +23,40 @@ footer {
   background: linear-gradient(180deg, $cityBlue 35%, rgba(37, 66, 118, 1) 140%);
   /* prevent unintended horizontal scroll */
   box-sizing: border-box;
+  
+
   a {
     color: white;
     font-size: 12px;
   }
 
+  hr {
+    width:50vw;
+    min-width: 320px;
+    margin:24px 0 24px 0;
+    height:1px;
+    border:none;
+    background-color:rgba($color: #ffffff, $alpha: 0.1);
+  }
+
+  .separator{
+    display: flex;
+    justify-content: center;
+  }
+
   .logos {
-    margin: auto;
-    margin-bottom: 32px;
-    font-size: 12px;
+    margin-top: 3rem;
     color: $white;
     display: flex;
     gap: 24px;
     justify-content: center;
+    align-items: flex-start;
+    .OSJ {
+      width: 96px;
+    }
+    .CFSJ {
+      width: 64px;
+    }
   }
   .legal {
     margin: auto;
@@ -42,9 +64,16 @@ footer {
     font-size: 12px;
     color: $white;
     display: flex;
-    gap: 24px;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 24px;
 
+    a {
+      text-decoration: none;
+
+    }
     a:visited {
       color: $pastGray;
     }
